crates/emela-codegen-js/tests/snapshots/run__panic.snap
---
source: crates/emela-codegen-js/tests/run.rs
expression: r.js
---
// Emela が生成したコード．
import { $panic } from "./emela_runtime.mjs";

function main() {
  return $panic("boom");
}

export { main };
