crates/emela-codegen-js/tests/snapshots/run__short_circuit.snap
---
source: crates/emela-codegen-js/tests/run.rs
expression: r.js
---
// Emela が生成したコード．
import { $panic, $showBool } from "./emela_runtime.mjs";

function main() {
  const $t0 = (false && $panic("and"));
  const $t1 = (true || $panic("or"));
  let $t2 = false;
  if ($t2) {
    const $t3 = $panic("must not run");
    $m0: {
      const v$1 = $t3;
      $t2 = v$1;
      break $m0;
    }
  }
  const $t4 = $t2;
  let $t5 = true;
  if (!$t5) {
    const $t6 = $panic("must not run");
    $m1: {
      const v$2 = $t6;
      $t5 = v$2;
      break $m1;
    }
  }
  const $t7 = $t5;
  const x$0 = 3;
  let $t8 = (x$0 > 1);
  if ($t8) {
    $m2: {
      if (x$0 === 3) {
        $t8 = true;
        break $m2;
      }
      $t8 = false;
      break $m2;
    }
  }
  return `${$showBool($t0)}\n${$showBool($t1)}\n${$showBool($t4)}\n${$showBool($t7)}\n${$showBool($t8)}\n${$showBool((!(false || false)))}`;
}

export { main };
