crates/emela-codegen-js/tests/snapshots/run__unmatched.snap
---
source: crates/emela-codegen-js/tests/run.rs
expression: r.js
---
// Emela が生成したコード．
import { $unreachable } from "./emela_runtime.mjs";

function main() {
  if (3 === 1) {
    return "one";
  }
  $unreachable();
}

export { main };
